fixed overflow

--- a/src/components/ProjectModal.css
+++ b/src/components/ProjectModal.css
@@ -12,7 +12,7 @@
 }
 
 .project-content {
-    overflow: scroll;
+    overflow-y: scroll;
 }
 
 .project-thumbnail {
